dnl Process this file with autoconf to produce a configure script.
AC_INIT(regex.c)
dnl Added CONFIG_AUX_DIR so the script will find install-sh. 04/12/04 jhrg
AC_CONFIG_AUX_DIR(..)
AC_CONFIG_HEADER([config.h])

AC_PROG_CC
AC_PROG_INSTALL

# Until further notice OS X port doesn't get -gstabs because of an
# apparent bug in their gcc 3.3 clone (a beta).  If you see this after
# 1/1/2005, you can probably remove it.
case "${host_cpu}:${host_vendor}:${host_os}" in
     powerpc:apple:netbsd* | alphaev56:dec:osf5.*)
       CFLAGS=${CFLAGS-"-O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-O2 $CXXFLAGS"}
       break;;
    *:*:*)
       CFLAGS=${CFLAGS-"-gstabs -O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-gstabs -O2 $CXXFLAGS"}
       break;;
esac    

dnl I'm not sure if AC_AIX and AC_DYNIX_SEQ are really necessary.  The
dnl Autoconf documentation isn't specific about which BSD functions they
dnl provide.
AC_AIX
AC_DYNIX_SEQ
AC_ISC_POSIX
AC_MINIX

AC_STDC_HEADERS
AC_HAVE_HEADERS(string.h)

AC_ALLOCA
AC_CONST

AC_PREFIX(gcc)

AC_OUTPUT(Makefile doc/Makefile test/Makefile)
